docs/2.0.2/_sources/api/deeptrack.backend.core.DeepTrackNode.rst.txt
DeepTrackNode
=============

.. currentmodule:: deeptrack.backend.core

.. autoclass:: DeepTrackNode
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DeepTrackNode.action
      ~DeepTrackNode.children
      ~DeepTrackNode.dependencies

   .. rubric:: Methods Summary

   .. autosummary::

      ~DeepTrackNode.__call__
      ~DeepTrackNode.add_child
      ~DeepTrackNode.add_dependency
      ~DeepTrackNode.current_value
      ~DeepTrackNode.get_citations
      ~DeepTrackNode.invalidate
      ~DeepTrackNode.is_valid
      ~DeepTrackNode.new
      ~DeepTrackNode.old_recurse_children
      ~DeepTrackNode.old_recurse_dependencies
      ~DeepTrackNode.print_children_tree
      ~DeepTrackNode.print_dependencies_tree
      ~DeepTrackNode.recurse_children
      ~DeepTrackNode.recurse_dependencies
      ~DeepTrackNode.set_value
      ~DeepTrackNode.store
      ~DeepTrackNode.update
      ~DeepTrackNode.valid_index
      ~DeepTrackNode.validate

   .. rubric:: Attributes Documentation

   .. autoattribute:: action
   .. autoattribute:: children
   .. autoattribute:: dependencies

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: add_child
   .. automethod:: add_dependency
   .. automethod:: current_value
   .. automethod:: get_citations
   .. automethod:: invalidate
   .. automethod:: is_valid
   .. automethod:: new
   .. automethod:: old_recurse_children
   .. automethod:: old_recurse_dependencies
   .. automethod:: print_children_tree
   .. automethod:: print_dependencies_tree
   .. automethod:: recurse_children
   .. automethod:: recurse_dependencies
   .. automethod:: set_value
   .. automethod:: store
   .. automethod:: update
   .. automethod:: valid_index
   .. automethod:: validate
